# koenigsberg

./: Cargo.toml  README.md  justfile  pixi.toml  pyproject.toml  renovate.json  requirements-dev.txt
.github/workflows/: ci-docs-main.yml  ci-docs-preview.yml  ci-lint.yml  ci-pr-title.yml  ci-pre-release.yml  ci-publish.yml  ci-renovate-lock.yml  ci-test-examples.yml  ci-test.yml
config/: uv.toml
docs/: _quarto.yml  about.qmd
python/koenigsberg/: __init__.py  main.py
python/koenigsberg/tests/: test_examples.py
python/tests/: test_register.py
src/: context.rs  dataframe.rs  errors.rs  lib.rs  utils.rs
