[package]
name = "koenigsberg"
version = "0.1.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "koenigsberg"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync"] }
pyo3 = { version = ">=0.21.1,<1", features = ["extension-module", "abi3", "abi3-py38", "gil-refs"] }
datafusion =  { version = ">=40.0.0, <42", features = ["pyarrow", "avro"]}
datafusion-common = { version = ">=40.0.0,<42", features = ["pyarrow"] }
prost = ">=0.12,<0.14"
arrow = ">=52.2.0, <54"

