[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "koenigsberg"
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "A really cool placeholder project for testing ideas"
authors = [{ name = "Daniel Mesejo", email = "mesejoleon@gmail.com" }]
dependencies = [
    "dask==2024.10.0; python_version >= '3.10' and python_version < '4.0'",
    "attrs==24.3.0; python_version >= '3.10' and python_version < '4.0'",
    "connectorx>=0.3.2,<1 ; python_version >= '3.10' and python_version < '4.0'",
    "psycopg2-binary==2.9.9 ; python_version >= '3.10' and python_version < '4.0'",
    "sqlalchemy==2.0.35; python_version >= '3.10' and python_version < '4.0'",
    "pyarrow>=13.0.0,<18; python_version >= '3.10' and python_version < '4.0'",
    "palmerpenguins==0.1.4 ; python_version >= '3.10' and python_version < '4.0'",
    "structlog==24.4.0; python_version >= '3.10' and python_version < '4.0'",
    "pytest==8.3.4; python_version >= '3.10' and python_version < '4.0'",
    "pytest-mock==3.14.0 ; python_version >= '3.10' and python_version < '4.0'",
    "narwhals==1.21.0; python_version >= '3.10' and python_version < '4.0'",
    "ibis-framework"
]

[project.optional-dependencies]
duckdb = ["duckdb<2.0.0,>=0.10.3"]
snowflake = ["snowflake-connector-python<4.0.0,>=3.10.1"]
datafusion = ["datafusion<42.0.0,>=34.0.0"]

[dependency-groups]
dev = [
    "black==24.8.0",
    "blackdoc==0.3.9",
    "codespell[hard-encoding-detection,toml]==2.3.0",
    "coverage[toml]==7.6.1",
    "git-cliff<3.0.0,>=2.2.1",
    "ipython<9.0.0,>=8.19.0",
    "pre-commit==3.8.0",
    "pytest==8.3.4",
    "pytest-cov==5.0.0",
    "ruff==0.11.0",
    "maturin>=1.7.4",
    "pip>=24.3.1",
]
test = [
    "scikit-learn<2.0.0,>=1.4.0",
    "xgboost>=1.6.1",
]
docs = [
    "quartodoc<1.0.0,>=0.7.2",
    "nbformat<6.0.0,>=5.10.4",
    "nbclient<1.0.0,>=0.10.0",
    "ipykernel<7.0.0,>=6.29.4",
]


[tool.maturin]
module-name = "koenigsberg._internal"
python-source = "python"
features = ["pyo3/extension-module"]
include = [
  { path = "wheels/*", format = ["sdist", "wheel"] },
]

[tool.codespell]
skip = "*.lock,.direnv,.git,docs/_freeze/**/html.json"
ignore-regex = '\b(DOUB|i[if]f|I[IF]F|lamduh|AFE|crate|ba)\b'
builtin = "clear,rare,names"
